force-app/main/default/objects/vlocity_ps__PSCasePartyRelationship__c/vlocity_ps__PSCasePartyRelationship__c.object-meta.xml
<CustomObject>
    <description>An object to hold the relationships between parties and benefit cases</description>
    <label>Benefit Case Party Relationship</label>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Benefit Case Party Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>