force-app/main/default/objects/vlocity_ps__PSCasePartyRelationship__c/fields/vlocity_ps__Address__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Address__c</fullName>
    <formula>&quot;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>