force-app/main/default/objects/vlocity_ps__PSCasePartyRelationship__c/fields/vlocity_ps__ImageType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ImageType__c</fullName>
    <formula>IF( vlocity_ps__PartyType__c = &apos;Contact&apos;, &apos;Contact&apos;, IF(vlocity_ps__PartyType__c = &apos;Household&apos;, &apos;Household&apos;, IF( vlocity_ps__PartyType__c = &apos;Account&apos; &amp;&amp;  vlocity_ps__IsPersonAccount__c == true, &apos;Contact&apos;, &apos;Account&apos;) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image Type</label>
    <type>Text</type>
</CustomField>