force-app/main/default/objects/vlocity_ps__PSCasePartyRelationship__c/fields/vlocity_ps__Mobile__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Mobile__c</fullName>
    <formula>vlocity_ps__PartyId__r.vlocity_ps__ContactId__r.MobilePhone</formula>
    <label>Phone</label>
    <type>Text</type>
</CustomField>