force-app/main/default/objects/vlocity_ps__PSCasePartyRelationship__c/fields/vlocity_ps__Name__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Name__c</fullName>
    <formula>IF( vlocity_ps__IsPersonAccount__c || vlocity_ps__PartyType__c == &apos;Contact&apos; ,  vlocity_ps__PartyId__r.vlocity_ps__ContactId__r.FirstName &amp; &quot; &quot; &amp;  vlocity_ps__PartyId__r.vlocity_ps__ContactId__r.LastName , vlocity_ps__PartyId__r.vlocity_ps__PartyEntityName__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>