force-app/main/default/objects/vlocity_ps__PSCasePartyRelationship__c/fields/vlocity_ps__PartyEntityId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__PartyEntityId__c</fullName>
    <formula>vlocity_ps__PartyId__r.vlocity_ps__PartyEntityId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Party Entity Id</label>
    <type>Text</type>
</CustomField>