force-app/main/default/objects/vlocity_ps__PSCasePartyRelationship__c/fields/vlocity_ps__PartyId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__PartyId__c</fullName>
    <label>Client</label>
    <referenceTo>vlocity_ps__Party__c</referenceTo>
    <relationshipLabel>Benefit Case Party Relationships</relationshipLabel>
    <relationshipName>BenefitCasePartyRelationships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>