force-app/main/default/objects/vlocity_ps__PSCasePartyRelationship__c/fields/vlocity_ps__PartyTypePlural__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__PartyTypePlural__c</fullName>
    <formula>IF(vlocity_ps__PartyType__c == &apos;Household&apos;, &apos;Households&apos;, IF( vlocity_ps__PartyType__c == &apos;Contact&apos;, &apos;People&apos;,IF (vlocity_ps__PartyType__c ==&apos;Account&apos; &amp;&amp;  vlocity_ps__IsPersonAccount__c == true, &apos;People&apos;, &apos;Accounts&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Party Type Plural</label>
    <type>Text</type>
</CustomField>