force-app/main/default/objects/vlocity_ps__PSCasePartyRelationship__c/fields/vlocity_ps__PSCaseId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__PSCaseId__c</fullName>
    <label>Benefit Case</label>
    <referenceTo>vlocity_ps__Case__c</referenceTo>
    <relationshipLabel>Benefit Case Party Relationships</relationshipLabel>
    <relationshipName>BenefitCasePartyRelationships</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>