force-app/main/default/objects/vlocity_ps__PSCasePartyRelationship__c/fields/vlocity_ps__Revenue__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Revenue__c</fullName>
    <formula>vlocity_ps__PartyId__r.vlocity_ps__AccountId__r.AnnualRevenue</formula>
    <label>Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>