force-app/main/default/objects/vlocity_ps__PSCasePartyRelationship__c/fields/vlocity_ps__Salutation__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Salutation__c</fullName>
    <formula>TEXT(vlocity_ps__PartyId__r.vlocity_ps__ContactId__r.Salutation)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salutation</label>
    <type>Text</type>
</CustomField>