force-app/main/default/objects/vlocity_ps__PSCasePartyRelationship__c/fields/vlocity_ps__SalutationName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__SalutationName__c</fullName>
    <formula>vlocity_ps__Salutation__c &amp; &quot; &quot; &amp; vlocity_ps__Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>