force-app/main/default/objects/vlocity_ps__PSCasePartyRelationship__c/fields/vlocity_ps__SortOrder__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__SortOrder__c</fullName>
    <formula>IF( vlocity_ps__PartyType__c == &apos;Household&apos;, 3, IF( vlocity_ps__PartyType__c == &apos;Contact&apos;, 1, IF (vlocity_ps__PartyType__c == &apos;Account&apos;, 2,4)))</formula>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>