force-app/main/default/objects/vlocity_ps__PSCasePartyRelationship__c/fields/vlocity_ps__Title__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Title__c</fullName>
    <formula>vlocity_ps__PartyId__r.vlocity_ps__ContactId__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Title</label>
    <type>Text</type>
</CustomField>