force-app/main/default/objects/vlocity_ps__PSCasePartyRelationship__c/recordTypes/vlocity_ps__Contact.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ps__Contact</fullName>
    <active>true</active>
    <description>Benefit Case Contact</description>
    <label>Contact</label>
</RecordType>